Completable future async task